sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: ')' expected but 'for' found.
                        for(j <-0 to (getNombreValeurs()-1))
                        ^